# NeuralNetworks

./: .env  .gitignore  CMakeLists.txt  Dockerfile  Helper.h  Hopfield.cpp  Hopfield.h  HopfieldLayer.cpp  HopfieldLayer.h  Layer.h  LearningRule.cpp  LearningRule.h  Model.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  Perceptron.cpp  Perceptron.h  PerceptronLayer.cpp  PerceptronLayer.h  README.md  docker-compose.yml  main.cpp  setEnv.sh
.devcontainer/: devcontainer.json
Diagrams/: uml.xmi
HopefieldNetwork/: Network.cpp  Network.h  Neuron.cpp  Neuron.h  main.cpp
Misc/: convert.py
include/base/: ActivationFunction.h  ConvolutionGeometry.h  GradientBaseModel.h  Initializer.h  Layer.h  LayerFactory.h  LayeredModel.h  LearningRule.h  Model.h  Tensor.h  Types.h
include/experimental/: PerceptronNaturalSelection.h
include/layers/: DenseLayer.h  FlattenLayer.h  HopfieldLayer.h
include/networks/: DenseLayer.h  FeedForward.h  FeedForwardLayer.h  Hopfield.h  HopfieldLayer.h  Perceptron.h  PerceptronLayer.h  PerceptronNaturalSelection.h
include/training/: FeedforwardTrainer.h  HopfieldTrainer.h  NaturalSelectionTrainer.h  PerceptronRuleTrainer.h  PerceptronTrainingAlgorithm.h  SupervisedTrainer.h
src/base/: GradientBaseModel.cpp  Layer.cpp  LayeredModel.cpp  LearningRule.cpp  Model.cpp
src/experimental/: PerceptronNaturalSelection.cpp
src/layers/: DenseLayer.cpp  FlattenLayer.cpp  HopfieldLayer.cpp
src/networks/: DenseLayer.cpp  FeedForward.cpp  FeedForwardLayer.cpp  Hopfield.cpp  HopfieldLayer.cpp  Perceptron.cpp  PerceptronLayer.cpp  PerceptronNaturalSelection.cpp
src/training/: FeedforwardTrainer.cpp  HopfieldTrainer.cpp  NaturalSelectionTrainer.cpp  PerceptronRuleTrainer.cpp
tests/: ActivationTests.cpp  ConvolutionGeometryTests.cpp  FeedForwardTests.cpp  HopfieldTests.cpp  LayerTests.cpp  LearningRuleTests.cpp  NaturalSelectionTrainerTests.cpp  PerceptronNaturalSelectionTests.cpp  PerceptronTests.cpp  SmokeTests.cpp  TensorTests.cpp
